# TitanicMLOps_David_Medina

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  readme.md  test.py
app/: README.md  main.py
config/: config.yaml
models/: model.pkl
src/: predict.py  preprocess.py  train.py
tests/: test_preprocess.py
